test/compile-errors/a.nz
bbb
| ERR: some error message
